force-app/main/default/objects/Apttus__Agreement_Protection__c/Apttus__Agreement_Protection__c.object-meta.xml
<CustomObject>
    <description>Specifies protection settings for agreements generated by the Apttus Contract Wizard and maintained by the Apttus Contract Author</description>
    <label>Agreement Protection</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Protection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>