force-app/main/default/objects/Apttus__Agreement_Protection__c/fields/Apttus__Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Action__c</fullName>
    <description>Agreement action to specify protection settings for.</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preview Agreement</fullName>
            </value>
            <value>
                <fullName>Generate Agreement</fullName>
            </value>
            <value>
                <fullName>Auto Generate Agreement</fullName>
            </value>
            <value>
                <fullName>Generate Supporting Document</fullName>
            </value>
            <value>
                <fullName>Regenerate Agreement</fullName>
            </value>
            <value>
                <fullName>Create Offline Agreement</fullName>
            </value>
            <value>
                <fullName>Import Offline Agreement</fullName>
            </value>
            <value>
                <fullName>Save Internal Version</fullName>
            </value>
            <value>
                <fullName>Save External Version</fullName>
            </value>
            <value>
                <fullName>Save Final Version</fullName>
            </value>
            <value>
                <fullName>Send To Other Party For Review</fullName>
            </value>
            <value>
                <fullName>Send To Other Party For Signatures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>