force-app/main/default/objects/Apttus__Agreement_Protection__c/fields/Apttus__Protection_Level__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Protection_Level__c</fullName>
    <description>Protection level applied to the Word document when an agreement is generated.</description>
    <label>Protection Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus__Protection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Full access</fullName>
            </value>
            <value>
                <fullName>Insert comments and tracked changes only</fullName>
            </value>
            <value>
                <fullName>Insert comments only</fullName>
            </value>
            <value>
                <fullName>Fill in form fields only</fullName>
            </value>
            <value>
                <fullName>Read only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>