force-app/main/default/objects/Apttus__Agreement_Protection__c/fields/Apttus__Protection_Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Protection_Type__c</fullName>
    <description>Type of protection (none, prompt user, or automatically assigned by the system).</description>
    <label>Protection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ignore</fullName>
                <default>true</default>
                <label>Ignore</label>
            </value>
            <value>
                <fullName>Prompt</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Unprotect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>